--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports: gRbase, MASS, bnlearn, igraph
+URL: https://github.com/nySTAT/OCD
+BugReports: https://github.com/nySTAT/OCD/issues
