--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
-Package: OCD
+Package: OrdCD
 Type: Package
 Title: Ordinal Causal Discovery
-Version: 0.2.0
-Author: Yang Ni
-Maintainer: Yang Ni <yni@stat.tamu.edu>
-Description: Discover Causality for Ordinal Cateogrical Data with Greedy and  Exhaustive Search
-License: `use_mit_license()`
+Version: 1.0.0
+Date: 2022-09-23
+Authors@R: person(given = "Yang", family = "Ni", email = "yni@stat.tamu.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-0636-2363"))
+Description: Algorithms for ordinal causal discovery. This package aims to enable users to discover causality for observational ordinal categorical data with greedy and exhaustive search. See Ni, Y., & Mallick, B. (2022) <https://proceedings.mlr.press/v180/ni22a/ni22a.pdf> "Ordinal Causal Discovery. Proceedings of the 38th Conference on Uncertainty in Artificial Intelligence, (UAI 2022), PMLR 180:1530–1540".
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
-Imports: gRbase, MASS, bnlearn, igraph
+RoxygenNote: 7.2.1
+Imports: gRbase, MASS, bnlearn, igraph, stats
 URL: https://github.com/nySTAT/OCD
 BugReports: https://github.com/nySTAT/OCD/issues
