--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
 Imports: gRbase, MASS, bnlearn, igraph, stats
-URL: https://github.com/nySTAT/OCD
+URL: https://github.com/nySTAT/OrdCD
 BugReports: https://github.com/nySTAT/OCD/issues
