--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
-Imports: gRbase, MASS, bnlearn, igraph, stats, Matrix
+Imports: gRbase, MASS, bnlearn, igraph, stats, Matrix, memoise
 URL: https://github.com/nySTAT/OrdCD
 BugReports: https://github.com/nySTAT/OrdCD/issues
